--- a/src/index.css
+++ b/src/index.css
@@ -90,8 +90,30 @@ body {
   font-family: "Graphik Trial";
 }
 
+.app {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  padding: 1em;
+}
+
+.container {
+  width: 100%;
+  max-width: 540px;
+  margin: 4em auto;
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 h1 {
-  font-size: 24px;
+  font-size: 22px;
   font-weight: 400;
   line-height: 1.3;
   color: var(--grey1);
@@ -123,6 +145,7 @@ a {
 .callout {
   width: max-content;
   height: 20px;
+  margin-top: 5px;
   display: flex;
   justify-content: center;
   align-self: center;
@@ -135,4 +158,10 @@ a {
   font-size: 12px;
   padding: 0 10px;
   color: var(--grey2);
+}
+
+@media (max-width: 900px) {
+  .app {
+    padding: 1.5em;
+  }
 }
