--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
+.app {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  padding: 1em;
+}
+
+.container {
+  width: 100%;
+  max-width: 540px;
+  margin: 4em auto;
+  display: flex;
+  flex-direction: column;
+  gap: 3em;
+}
+
 .bio {
   width: 100%;
   display: flex;
@@ -6,15 +22,39 @@
 }
 
 .profile-picture {
-  width: 90px;
-  height: 90px;
+  width: 80px;
+  height: 80px;
   border-radius: 100%;
   overflow: hidden;
   background-color: var(--wash1);
   flex-shrink: 0;
 }
 
+.section-title {
+  margin-bottom: 1em;
+  flex-shrink: 0;
+}
+
+.section-content {
+  width: 100%;
+  display: flex;
+  gap: 0.5em;
+  margin-bottom: 0.75em;
+}
+
+.section-content .col:nth-child(1) {
+  flex: 1;
+}
+
+.section-content .col:nth-child(2) {
+  flex: 3;
+}
+
 @media (max-width: 900px) {
+  .app {
+    padding: 1.5em;
+  }
+
   .bio {
     align-items: flex-start;
     flex-direction: column;
