--- a/src/index.css
+++ b/src/index.css
@@ -88,22 +88,7 @@ body {
   background-color: var(--bg);
   color: var(--grey2);
   font-family: "Graphik Trial";
-}
-
-.app {
-  width: 100%;
-  height: 100%;
-  min-height: 100vh;
-  padding: 1em;
-}
-
-.container {
-  width: 100%;
-  max-width: 540px;
-  margin: 4em auto;
-  display: flex;
-  flex-direction: column;
-  gap: 3em;
+  overflow-x: hidden;
 }
 
 img {
@@ -113,14 +98,14 @@ img {
 }
 
 h1 {
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 400;
   line-height: 1.3;
   color: var(--grey1);
 }
 
 p {
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 400;
   line-height: 1.6;
   color: var(--grey2);
@@ -135,17 +120,21 @@ p.secondary {
 }
 
 a {
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 400;
   line-height: 1.6;
   text-decoration: none;
   color: var(--grey1);
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 .callout {
   width: max-content;
   height: 20px;
-  margin-top: 5px;
+  margin-top: 4px;
   display: flex;
   justify-content: center;
   align-self: center;
@@ -160,8 +149,16 @@ a {
   color: var(--grey2);
 }
 
-@media (max-width: 900px) {
-  .app {
-    padding: 1.5em;
-  }
+.callout:hover a {
+  text-decoration: none;
+}
+
+.callout:hover a:hover {
+  text-decoration: none;
+}
+
+.link {
+  display: flex;
+  align-items: center;
+  gap: 0.25em;
 }
